[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/CreditsScene.gd" type="Script" id=1]
[ext_resource path="res://Prefabs/Balloon.tscn" type="PackedScene" id=2]
[ext_resource path="res://Art/Sprites/BasicSky.png" type="Texture" id=3]
[ext_resource path="res://Art/Fonts/Gretoon.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]

size = 50
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=2]

size = 30
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 20
use_mipmaps = false
use_filter = false
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Curve2D" id=4]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 5.03613, 861.917, 0, 0, 0, 0, 296.143, 923.563, 0, 0, 0, 0, 1484.55, 926.988, 0, 0, 0, 0, 1844.15, 920.138, 0, 0, 0, 0, 5.19104, 855.067 )
}

[node name="CreditsScene" type="Node" index="0"]

script = ExtResource( 1 )
Balloon = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 3 )
expand = true
stretch_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
_sections_unfolded = [ "Size Flags" ]

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 130.0
margin_top = 115.0
margin_right = 893.0
margin_bottom = 485.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_constants/separation = 50
alignment = 0
_sections_unfolded = [ "Anchor", "Margin", "Size Flags", "custom_constants" ]

[node name="Thanks" type="Label" parent="MarginContainer/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 763.0
margin_bottom = 51.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 6
custom_fonts/font = SubResource( 1 )
text = "THANK YOU FOR PLAYING!"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="LudumGame" type="Label" parent="MarginContainer/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 101.0
margin_right = 763.0
margin_bottom = 132.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 6
custom_fonts/font = SubResource( 2 )
text = "Created during the Ludum Dare 43."
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Introduction" type="Label" parent="MarginContainer/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 182.0
margin_right = 763.0
margin_bottom = 213.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 6
custom_fonts/font = SubResource( 2 )
text = "Idea, Art and Development by:"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Names" type="Label" parent="MarginContainer/VBoxContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 263.0
margin_right = 763.0
margin_bottom = 294.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 6
custom_fonts/font = SubResource( 2 )
text = "Evanaellio, Teanan and Youkool"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="MenuButton" type="Button" parent="MarginContainer/VBoxContainer" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 342.0
margin_top = 344.0
margin_right = 420.0
margin_bottom = 370.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Menu"
flat = false
align = 1
_sections_unfolded = [ "Size Flags", "custom_fonts" ]

[node name="PathPop" type="Path2D" parent="MarginContainer/VBoxContainer" index="5"]

self_modulate = Color( 0.5, 0.6, 1, 0.7 )
position = Vector2( -131, -148 )
curve = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="BalloonSpawnLocation" type="PathFollow2D" parent="MarginContainer/VBoxContainer/PathPop" index="0"]

position = Vector2( 4.88109, 621.394 )
rotation = 0.947592
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="TimerPopBalloon" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 0.33
one_shot = false
autostart = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]

[connection signal="timeout" from="TimerPopBalloon" to="." method="_on_TimerPopBalloon_timeout"]


